# en_ja_translator_pytorch

./: .envrc  .gitignore  README.md  main.py  pyproject.toml  train.py
const/: path.py
layers/transformer/: FFN.py  MultiHeadAttention.py  PositionalEncoding.py  ScaledDotProductAttention.py  TransfomerDecoder.py  TransformerDecoder.py  TransformerEncoder.py  embedding.py
models/: Transformer.py  __init__.py
shell/: send.sh
tests/: conftest.py
tests/layers/: test_ffn.py  test_multihead_attention.py  test_positional_encoding.py  test_transformer_layer.py
tests/models/: test_transformer.py
tests/utils/: test_text.py
utils/: download.py  test_text.py  text.py  vocab.py
utils/dataset/: Dataset.py
utils/evaluation/: bleu.py
utils/text/: test_text.py  text.py  vocab.py
