[tool.poetry]
name = "en_ja_translator_pytorch"
version = "0.1.0"
description = ""
authors = ["YadaYuki <yada.yuki@fuji.waseda.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
scikit-learn = "^1.0.2"
torch = "^1.10.2"
torchtext = "^0.11.2"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"
types-requests = "^2.27.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
